# NA15-refactoring-workshop

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
SnakeController/: CMakeLists.txt  SnakeController.hpp
cmake/: GTest.cmake
